# IQtools

./: .gitignore  .qmlls.ini  AGENTS.md  CMakeLists.txt  README.md
.cache/clangd/index/: test_core.cpp.B89E07A10F37447F.idx
plan/: README.md  clipboard_complete_plan.md  clipboard_database_design.md  clipboard_implementation_plan.md  clipboard_quick_reference.md  qml_transition_implementation_plan.md  qml_transition_plan.md  screenshot_blur_fix_plan.md  screenshot_tool_plan.md  shortcut_management_plan.md
src/app/: main.cpp
src/app/bootstrap/: application_bootstrap.cpp  application_bootstrap.h
src/app/shell/: main_window.cpp  main_window.h
src/app/shell/bridge/: app_facade.cpp  app_facade.h  capture_controller.cpp  capture_controller.h  log_console_controller.cpp  log_console_controller.h  logging_settings_controller.cpp  logging_settings_controller.h  navigation_controller.cpp  navigation_controller.h  settings_controller.cpp  settings_controller.h  theme_controller.cpp  theme_controller.h  tool_list_model.cpp  tool_list_model.h  translation_controller.cpp  translation_controller.h  translation_settings_controller.cpp  translation_settings_controller.h  update_controller.cpp  update_controller.h  window_controller.cpp  window_controller.h
src/app/shell/qml/: AppWindow.qml  main.qml
src/app/shell/qml/components/: AppSidebar.qml  BentoCard.qml  NavItem.qml  ThemedButton.qml  TranslationEditorPanel.qml
src/app/shell/qml/pages/: CapturePage.qml  HomePage.qml  LogPage.qml  PluginPage.qml  SettingsPage.qml  TranslatePage.qml
src/app/shell/widgets/: pin_image_window.cpp  pin_image_window.h
src/core/appcontext/: app_context.cpp  app_context.h
src/core/capture/: annotation_dialog.cpp  annotation_dialog.h  i_capture_service.h  region_selection_dialog.cpp  region_selection_dialog.h  screen_capture_service.cpp  screen_capture_service.h
src/core/plugin/: plugin_manager.cpp  plugin_manager.h
src/core/services/: auto_start_manager.cpp  auto_start_manager.h  i18n_manager.cpp  i18n_manager.h  log_service.cpp  log_service.h  theme_manager.cpp  theme_manager.h  translation_provider.cpp  translation_provider.h  translation_service.cpp  translation_service.h  translation_types.h  update_checker.cpp  update_checker.h
src/core/settings/: settings_manager.cpp  settings_manager.h  shortcut_manager.cpp  shortcut_manager.h
src/core/tools/: tool_metadata.h  tool_registry.cpp  tool_registry.h
src/docs/: architecture.md  logging-system.md  plugin-system.md  theme-system.md
src/infra/logging/: log_entry.h  log_level.h  log_manager.cpp  log_manager.h  logger.cpp  logger.h
src/infra/storage/: settings_storage.cpp  settings_storage.h
src/plugin-api/: iplugin.h  iplugin_context.h  itool_plugin.h  plugin_constants.h
src/plugins/capture/: capture_plugin.cpp  capture_plugin.h
src/plugins/translate/: translate_plugin.cpp  translate_plugin.h
src/resources/qss/: dark.qss  light.qss
src/resources/translations/: iqtools_en_US.ts  iqtools_zh_CN.ts
src/tests/: .gitkeep
tests/: CMakeLists.txt  test_core.cpp
